--- a/package.json
+++ b/package.json
@@ -10,8 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+   "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.5",
+    "iconsax-react-native": "^0.0.8",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.73.2",
+    "react-native-fbsdk-next": "^12.1.3",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
