--- a/ios/EventHub/Info.plist
+++ b/ios/EventHub/Info.plist
@@ -47,7 +47,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<string>Tìm sự kiện đang diễn ra gần bạn</string>
+	<key>SLocationWhenInUseUsageDescription</key>
+	<string>Tìm sự kiện đang diễn ra gần bạn</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+
+
+
 	<key>UIAppFonts</key>
+
+
+
 	<array>
 		<string>AirbnbCereal_W_Bd.otf</string>
 		<string>AirbnbCereal_W_Bk.otf</string>
